tests/test125.rael.exp
Error [2:5]: the dog ate the cat
|     blame "the dog ate the cat"
|     ^
