tests/test125.rael
routine() {
    blame "the dog ate the cat"
}()
